# can2040-helloworld

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
